--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --color-background: #191919;
+}
+
+body {
+    background-color: var(--color-background);
+    padding: 0;
+    margin: 0;
+    color: white;
+    font-family: "Roboto", serif;
+}
